if (${USE_DAMM})
	add_executable(MCA_DAMM MCA_DAMM.cpp HisDrr.cpp)
	install(TARGETS MCA_DAMM DESTINATION ${CMAKE_INSTALL_PREFIX})
	target_link_libraries(MCA_DAMM PixieInterface Utility)
endif()

if (${USE_ROOT}) 
	add_executable(MCA_ROOT MCA_ROOT.cpp)
	install(TARGETS MCA_ROOT DESTINATION ${CMAKE_INSTALL_PREFIX})
	target_link_libraries(MCA_ROOT PixieInterface Utility ${ROOT_LIBRARIES})
endif()
